# apparator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md
engine/: CMakeLists.txt
engine/include/: camera.hpp  drawable.hpp  material.hpp  math.hpp  mesh.hpp  model.hpp  node.hpp  resources.hpp  shader.hpp  stb_image.h  texture.hpp  transform.hpp
engine/resources/shaders/: textured.frag
engine/src/: camera.cpp  drawable.cpp  drawable.hpp  input.cpp  input.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  model.cpp  model.hpp  node.cpp  node.hpp  resources.cpp  texture.cpp  transform.cpp
engine/src/math/: mat4.cpp  mat4.hpp  quaternion.cpp  quaternion.hpp  transform.cpp  transform.hpp  utils.cpp  utils.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp  vector4.cpp  vector4.hpp
engine/src/renderer/: camera.cpp  camera.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
include/: camera.hpp  file.hpp  input.hpp  material.hpp  math.hpp  mesh.hpp  model.hpp  resources.hpp  shader.hpp  shaders.hpp  transform.hpp
libs/: CMakeLists.txt
shaders/: colored.frag  fragment.glsl  textured.frag  vertex.glsl
src/: camera.cpp  file.cpp  input.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  resources.cpp  shader.cpp  shaders.cpp  texture.cpp  transform.cpp
src/input/: mouse.cpp
src/math/: mat4.cpp  quaternion.cpp  utils.cpp  vec2.cpp  vec3.cpp  vec4.cpp  vector2.cpp  vector3.cpp
